--- a/idex.html
+++ b/idex.html
@@ -8,9 +8,9 @@
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- 4. Nuestro script -->
-  <script src="assets/js/script.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
   <!-- 2. Estilos propios -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/estilos.css" rel="stylesheet">
 </head>
 <body>
   
